--- a/Project 0_1 Bank Data Analitics/churn_analitics.ipynb
+++ b/Project 0_1 Bank Data Analitics/churn_analitics.ipynb
@@ -177,8 +177,28 @@
     }
    ],
    "source": [
-    "import pandas as pd # Импорт библиотеки pandas\n",
+    "# Импорт библиотеки pandas\n",
+    "import pandas as pd \n",
     "\n",
+    "# Импортируем модуль matplotlib.pypplot для построения простых визуализаций\n",
+    "import matplotlib.pyplot as plt \n",
+    "import numpy as np\n",
+    "\n",
+    "# Импортируем более продвинутую библиотеку для визуализации seaborn\n",
+    "import seaborn as sns \n",
+    "\n",
+    "# Импортируем библиотеку plotly для работы с продвинутой графикой\n",
+    "import plotly\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
     "\n",
     "churn_data = pd.read_csv('data/churn.csv') # Читаем данные из файла\n",
     "churn_data.head()"
@@ -593,9 +613,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt # Импортируем модуль matplotlib.pypplot для построения простых визуализаций\n",
-    "%matplotlib inline\n",
-    "\n",
     "# Посмотрим на разницу ушедших и лояльных клиентов\n",
     "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10, 5),constrained_layout=True)\n",
@@ -939,8 +956,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns # Импортируем более продвинутую библиотеку для визуализации seaborn\n",
-    "\n",
     "# Посмотрим распределение баланса на счетах у клиентов\n",
     "fig, axes = plt.subplots(figsize=(15, 8))\n",
     "sns.histplot(\n",
@@ -1906,8 +1921,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Сделаем список значений для внешнего круга диаграммы\n",
     "churn_gend_sums = list()\n",
     "\n",
@@ -2184,17 +2197,6 @@
    "metadata": {},
    "source": [
     "### 9. В какой стране доля ушедших клиентов больше? Постройте тепловую картограмму, которая покажет это соотношение на карте мира. Предположите, с чем это может быть связано."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Импортируем библиотеку plotly для работы с продвинутой графикой\n",
-    "import plotly\n",
-    "import plotly.express as px"
    ]
   },
   {
